--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,7 @@ p {
     margin-bottom: 20px;
     max-width: 600px;
     line-height: 1.6;
+    text-shadow: 0 0 10px rgb(255, 255, 255);
 }
 
 .btn {
@@ -104,7 +105,7 @@ p {
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 25px;
-    font-size: 1rem;
+    font-size: 0.8rem;
     cursor: pointer;
     margin: 10px;
     text-decoration: none;
